fix: actually apply high contrast font

--- a/src/pages/styles/globals.css
+++ b/src/pages/styles/globals.css
@@ -44,7 +44,7 @@ h2 {
   :root {
     --highlight-color: rgba(255, 209, 75, 0.1);
   }
-  body {
+  body, main {
     /* use a non-handwritten font in high contrast mode */
     font-family: 'Atkinson Hyperlegible', Inter, system-ui, sans-serif !important;
   }
